objects/Apttus_Config2__ProductOptionComponent__c.object
<CustomObject>
    <description>Represents a product option component which is a member of the list of options associated with a product.option group</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowCloning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to display the cloning action in a sub bundle configuration</description>
        <label>Allow Cloning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoUpdateQuantity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto update default quantity when participants of expression change.</description>
        <inlineHelpText>Auto update default quantity when participants of expression change.</inlineHelpText>
        <label>Auto Update Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ComponentProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the component product</description>
        <label>Component Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Parent Products</relationshipLabel>
        <relationshipName>ParentProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigType__c</fullName>
        <description>To set whether the configuration should be inline or new page</description>
        <label>Config Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inline</fullName>
                    <default>true</default>
                    <label>Inline</label>
                </value>
                <value>
                    <fullName>New Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultQuantityExpressionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Quantity Expression</label>
        <referenceTo>Apttus_Config2__FieldExpression__c</referenceTo>
        <relationshipLabel>Product Option Components (Default Quantity Expression)</relationshipLabel>
        <relationshipName>ProductOptionComponents2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultQuantity__c</fullName>
        <description>The default quantity that should be presented to the user for selection.</description>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the option is a default for the product.</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InclusionCriteria__c</fullName>
        <description>The inclusion criteria. When the inclusion criteria is met, the option component will be included in the bundle. Only applicable when the option is not already included by default.</description>
        <inlineHelpText>The inclusion criteria. When the inclusion criteria is met, the option component will be included in the bundle. Only applicable when the option is not already included by default.</inlineHelpText>
        <label>Inclusion Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxQuantityExpressionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Max Quantity Expression</label>
        <referenceTo>Apttus_Config2__FieldExpression__c</referenceTo>
        <relationshipLabel>Product Option Components</relationshipLabel>
        <relationshipName>ProductOptionComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxQuantity__c</fullName>
        <description>The maximum quantity of the option that may be selected. The quantity can be zero.</description>
        <label>Max Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MinQuantityExpressionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Min Quantity Expression</label>
        <referenceTo>Apttus_Config2__FieldExpression__c</referenceTo>
        <relationshipLabel>Product Option Components (Min Quantity Expression)</relationshipLabel>
        <relationshipName>ProductOptionComponents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MinQuantity__c</fullName>
        <description>The minimum quantity of the option that must be selected. The quantity can be zero.</description>
        <label>Min Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Modifiable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the option or component quantity is modifiable.</description>
        <label>Quantity Modifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the parent product</description>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Options</relationshipLabel>
        <relationshipName>Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductOptionGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product option group</description>
        <label>Product Option Group</label>
        <referenceTo>Apttus_Config2__ProductOptionGroup__c</referenceTo>
        <relationshipLabel>Options</relationshipLabel>
        <relationshipName>Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelationshipType__c</fullName>
        <description>The type of relationship between the option and the product</description>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option</fullName>
                    <default>true</default>
                    <label>Option</label>
                </value>
                <value>
                    <fullName>Component</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the options is required have for the bundle.</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>Option sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Option Component</label>
    <nameField>
        <displayFormat>PC-{0000000000}</displayFormat>
        <label>Option Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Option Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>